--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                 <h2 class="text-center font-extrabold text-[1.5em] mb-5">PROJECTS</h2>
             </div>
             <div class="">
-                <ul class="flex flex-wrap justify-center gap-y-10 md:gap-x-5 sm:grid sm:grid-cols-2 sm:grid-rows-2 justify-items-center">
+                <ul class=" flex flex-wrap justify-center gap-y-10 md:gap-x-5 sm:grid sm:justify-center sm:align-middle sm:items-center sm:grid-cols-2 sm:grid-rows-2 justify-items-center">
                     <a href="https://sportsweed.netlify.app/" target="_blank"> <li class="sm:h-50   h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl  border-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/sportsweed.png);">SportsWeed</li></a>
-                    <a href="https://infodetailsxo.netlify.app/" target="_blank"> <li class=" sm:h-50 h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl  border-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/info.png);">Info Details</li></a>
-                    <a href="https://sportsweed2.netlify.app/ " target="_blank"> <li class=" sm:h-50 h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl tborder-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/sp2.png);">SportsWeed2</li></a>
+                    <a href="https://myinfo-roan.vercel.app/" target="_blank"> <li class=" sm:h-50 h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl  border-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/info.png);">Info Details</li></a>
+                    <a href="https://sportsweed2.vercel.app/ " target="_blank"> <li class=" sm:h-50 h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl tborder-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/sp2.png);">SportsWeed2</li></a>
+                    <a href="https://google-page-self.vercel.app/ " target="_blank"> <li class=" sm:h-50 h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl tborder-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/googlepage.png);">Google Home</li></a>
                     <a href="./index.html" target="_blank"> <li class=" sm:h-50 h-40 w-80 bg-cover bg-[#555] bg-blend-overlay bg-center flex items-center justify-center font-semibold text-xl  border-2 border-fuchsia-50 rounded-2xl" style="background-image: url(./pics/portfolio.png);">MyPortFolio</li></a>
                 </ul>
             </div>
