--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="mt-10">
         <div>
             <div>
-                <h2 class="text-center font-extrabold text-[1.5em] mb-5">PROJECTS</h2>
+                <h2 class="text-center font-extrabold text-[1.5em] mb-5">PROJECTSs</h2>
             </div>
             <div class="">
                 <ul class=" flex flex-wrap justify-center gap-y-10 md:gap-x-5 sm:grid sm:justify-center sm:align-middle sm:items-center sm:grid-cols-2 sm:grid-rows-2   justify-items-center">
