--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <!-- NAVBAR -->
 <nav class="w-full py-4 border-b border-gray-700">
-    <h1 class="text-center text-2xl font-bold tracking-wide">My Portfolio</h1>
+    <h1 class="text-center text-2xl font-bold tracking-wide">Tarique Shaikh</h1>
 </nav>
 
 <!-- HERO SECTION -->
