--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Tarique Shaikh</title>
     <link rel="stylesheet" href="./output.css" />
 </head>
 
@@ -124,12 +124,90 @@
 </section>
 
 <!-- FOOTER -->
-<footer class="mt-16 mb-6 text-center">
-    <p class="italic text-gray-300">
-        “The computer was born to solve problems that did not exist before.”
-    </p>
-    <h3 class="mt-2 font-bold">— Bill Gates —</h3>
+<!-- FOOTER -->
+<footer class="mt-20 border-t border-gray-700 py-8">
+    <div class="w-[90%] mx-auto flex flex-col items-center gap-5 text-center">
+
+        <!-- NAME -->
+        <h2 class="text-xl font-semibold">Tarique Shaikh</h2>
+
+        <!-- SOCIAL ICONS -->
+        <div class="flex gap-6">
+
+            <!-- GITHUB -->
+            <a href="https://github.com/tariquescript" target="_blank"
+               class="text-gray-400 hover:text-white transition">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
+                    0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757
+                    -1.09-.745.083-.73.083-.73 1.205.085 1.84 1.236 1.84 1.236
+                    1.07 1.835 2.807 1.305 3.492.998.108-.776.418-1.305.76-1.605
+                    -2.665-.3-5.466-1.332-5.466-5.93 0-1.31.468-2.38 1.235-3.22
+                    -.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23
+                    .96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405
+                    2.28-1.552 3.285-1.23 3.285-1.23
+                    .645 1.653.24 2.873.12 3.176
+                    .765.84 1.23 1.91 1.23 3.22
+                    0 4.61-2.805 5.625-5.475 5.92
+                    .435.375.825 1.11.825 2.24
+                    0 1.62-.015 2.92-.015 3.32
+                    0 .315.21.69.825.57
+                    C20.565 21.795 24 17.295 24 12
+                    24 5.37 18.63 0 12 0z"/>
+                </svg>
+            </a>
+
+            <!-- LINKEDIN -->
+            <a href="https://www.linkedin.com/in/tariquedev/" target="_blank"
+               class="text-gray-400 hover:text-white transition">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 11.268h-3v-5.604c0-1.337-.027-3.057-1.863-3.057-1.864 0-2.149 1.455-2.149 2.959v5.702h-3v-10h2.879v1.367h.041c.401-.761 1.381-1.563 2.843-1.563 3.041 0 3.604 2.004 3.604 4.609v5.587z"/>
+                </svg>
+            </a>
+
+            <!-- TWITTER -->
+            <a href="https://x.com/AFellow10" target="_blank"
+               class="text-gray-400 hover:text-white transition">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M23.954 4.569c-.885.392-1.83.654-2.825.775
+                    1.014-.611 1.794-1.574 2.163-2.724
+                    -.951.564-2.005.974-3.127 1.195
+                    -.897-.957-2.178-1.555-3.594-1.555
+                    -2.717 0-4.92 2.203-4.92 4.917
+                    0 .39.045.765.127 1.124
+                    -4.087-.205-7.713-2.165-10.141-5.144
+                    -.422.722-.666 1.561-.666 2.475
+                    0 1.71.87 3.213 2.188 4.096
+                    -.807-.026-1.566-.247-2.228-.616
+                    -.054 2.385 1.693 4.374 3.946 4.827
+                    -.413.111-.849.171-1.296.171
+                    -.314 0-.615-.03-.916-.086
+                    .631 1.953 2.445 3.377 4.6 3.419
+                    -1.68 1.319-3.809 2.105-6.102 2.105
+                    -.39 0-.779-.023-1.17-.067
+                    2.189 1.394 4.768 2.209 7.557 2.209
+                    9.054 0 14-7.496 14-13.986
+                    0-.21 0-.423-.015-.637
+                    .961-.689 1.8-1.56 2.46-2.548z"/>
+                </svg>
+            </a>
+        </div>
+
+        <!-- EMAIL -->
+        <p class="text-gray-400 text-sm">
+            📧 <a href="mailto:tariqueshaikh@email.com" class="hover:text-white transition">
+                tariquescript@email.com
+            </a>
+        </p>
+
+        <!-- COPYRIGHT -->
+        <p class="text-xs text-gray-500 mt-2">
+            © 2025 Tarique Shaikh. All rights reserved.
+        </p>
+
+    </div>
 </footer>
+
 
 </body>
 </html>
