about section updated

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,7 @@
         <div class="text-center md:text-left">
             <h2 class="text-xl font-semibold mb-3">Profile</h2>
             <p class="text-gray-300 leading-7">
-                Completed Computer Engineering. Skilled in JavaScript, React, MySQL, 
-                and administrative operations. Passionate about building clean and 
-                functional web applications.
-            </p>
+                Software Engineer specializing in modern frontend development with HTML, Tailwind CSS, JavaScript, and React, with experience in Ubuntu and Cloudflare hosting.
         </div>
 
     </div>
